--- a/README
+++ b/README
@@ -4,6 +4,13 @@ Introduction
 libreprobe is a software NetFlow v5/v9/IPFIX and nFlow probe that allows to turn a PC into a NetFlow probe.
 It has been designed to be compact, easy to embed, an memory/CPU savvy.
 
+This repo includes parts of the following github repos:
+- https://github.com/seryl/nprobe
+- https://github.com/kvitaly2005/lprobe/
+- https://github.com/ntop/nDPI/releases/tag/1.6 which is now available at https://github.com/FailOPS/libreDPI
+
+I had to use them to get a working libreprobe instance.
+
 Mandatory Packages (Ubuntu/Debian)
 ==================================
 In order to compile libreprobe on Linux you need some mandatory packages/tools. Below we list those
